fix(cors): allow all vercel preview subdomains (*.vercel.app) in SecurityConfig